Closed
Bug 205850
Opened 22 years ago
Closed 22 years ago
"rightmargin" keyword seems to be ignored. there should be some white space between the right border and the text
Categories
(Core :: Layout: Block and Inline, defect)
Core
Layout: Block and Inline
Tracking
()
RESOLVED
FIXED
People
(Reporter: schroeder, Assigned: samuel)
References
()
Details
Attachments
(1 file, 2 obsolete files)
3.41 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
asa
:
approval1.4+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4b) Gecko/20030507
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4b) Gecko/20030507
In the page at http://www.visual-imagination.de/wir.html, the "rightmargin"
keyword seems to be ignored. it is written in capital letters in the html code,
but changing that to small letters doesn't help. there should be some white
space (50 pixels) between the right border and the text
Reproducible: Always
Steps to Reproduce:
1. just have a look at http://www.visual-imagination.de/wir.html
2.
3.
Comment 1•22 years ago
|
||
"rightmargin" is not part of the HTML specs. It is an IE-only proprietary
attribute.
Status: UNCONFIRMED → RESOLVED
Closed: 22 years ago
Resolution: --- → INVALID
![]() |
||
Comment 2•22 years ago
|
||
Reopening. We support leftmargin and topmargin in quirks mode; I do not see a
reason to support those but not rightmargin....
Status: RESOLVED → UNCONFIRMED
Resolution: INVALID → ---
Comment 3•22 years ago
|
||
Well I can see _some_ reasons...
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 4•22 years ago
|
||
I think I can do this.
Assignee: block-and-inline → samuel
OS: Windows 2000 → All
Hardware: PC → All
Assignee | ||
Comment 5•22 years ago
|
||
![]() |
||
Comment 7•22 years ago
|
||
Comment on attachment 123453 [details] [diff] [review]
add rightmargin property
Any reason not to do bottommargin while you're here?
Assignee | ||
Comment 8•22 years ago
|
||
Oh, I was thinking bottommargin wouldn't make sense and didn't know if it
existed. :-) Patch coming up.
Assignee | ||
Comment 9•22 years ago
|
||
Attachment #123453 -
Attachment is obsolete: true
![]() |
||
Comment 10•22 years ago
|
||
The bottommargin code gets the topmargin attribute in that patch....
Fix that? ;)
Assignee | ||
Comment 11•22 years ago
|
||
C&P error. And my testcase wasn't good enough... :-/
Attachment #123510 -
Attachment is obsolete: true
![]() |
||
Comment 12•22 years ago
|
||
Comment on attachment 123527 [details] [diff] [review]
all the margins V3
r+sr=me, but please hold off on this checkin
until dbaron lands his nsCSSDeclaration rewrite. You'll
need to update to use nsCSSRect& instead of nsCSSRect* at that point, but that
should be simple.
Attachment #123527 -
Flags: superreview+
Attachment #123527 -
Flags: review+
Assignee | ||
Comment 13•22 years ago
|
||
What's the bug # so I can watch for it?
![]() |
||
Comment 14•22 years ago
|
||
Bug 125246. Thanks for the patch, Samuel!
Assignee | ||
Comment 15•22 years ago
|
||
Is the nsCSSDeclaration rewrite going to make it on the 1.4 branch? Maybe this
could go on the branch but wait on the trunk?
![]() |
||
Comment 16•22 years ago
|
||
That's certainly not going onto the branch. If you can get approval, feel free
to land on the branch.
Assignee | ||
Updated•22 years ago
|
Attachment #123527 -
Flags: approval1.4?
Comment 17•22 years ago
|
||
Comment on attachment 123527 [details] [diff] [review]
all the margins V3
a=asa (on behalf of drivers) for checkin to the 1.4 branch.
Attachment #123527 -
Flags: approval1.4? → approval1.4+
Assignee | ||
Comment 18•22 years ago
|
||
checked into branch
Feel free to land this on the trunk as well -- I can handle the merging needed.
Comment 20•22 years ago
|
||
Branch build 2003-06-12: Win2k, Mac 10.1.5
Branch build 2003-06-11: Linux RH 8
Marking Verified1.4.
It appears that this is fixed on the branch builds. I see a wider right margin
versus what is displayed in the trunk builds.
Keywords: fixed1.4 → verified1.4
Assignee | ||
Comment 21•22 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•