Bug 205850 - add "rightmargin" and "bottommargin" keywords r+sr=bz