content/html/content/src/nsHTMLBodyElement.cpp
@@ -163,7 +163,9 @@ BodyRule::MapRuleInfoInto(nsRuleData* aData)
   PRInt32 bodyMarginWidth  = -1;
   PRInt32 bodyMarginHeight = -1;
   PRInt32 bodyTopMargin = -1;
+  PRInt32 bodyBottomMargin = -1;
   PRInt32 bodyLeftMargin = -1;
+  PRInt32 bodyRightMargin = -1;
 
   // check the mode (fortunately, the ruleData has a presContext for us to use!)
   nsCompatibility mode;
@@ -206,6 +208,16 @@ BodyRule::MapRuleInfoInto(nsRuleData* aData)
           margin.mTop.SetFloatValue((float)bodyTopMargin, eCSSUnit_Pixel);
       }
 
+      // bottommargin (IE-attribute)
+      mPart->GetHTMLAttribute(nsHTMLAtoms::bottommargin, value);
+      if (eHTMLUnit_Pixel == value.GetUnit()) {
+        bodyBottomMargin = value.GetPixelValue();
+        if (bodyBottomMargin < 0) bodyBottomMargin = 0;
+        nsCSSRect& margin = aData->mMarginData->mMargin;
+        if (margin.mBottom.GetUnit() == eCSSUnit_Null)
+          margin.mBottom.SetFloatValue((float)bodyBottomMargin, eCSSUnit_Pixel);
+      }
+
       // leftmargin (IE-attribute)
       mPart->GetHTMLAttribute(nsHTMLAtoms::leftmargin, value);
       if (eHTMLUnit_Pixel == value.GetUnit()) {
@@ -214,6 +226,16 @@ BodyRule::MapRuleInfoInto(nsRuleData* aData)
         nsCSSRect& margin = aData->mMarginData->mMargin;
         if (margin.mLeft.GetUnit() == eCSSUnit_Null)
           margin.mLeft.SetFloatValue((float)bodyLeftMargin, eCSSUnit_Pixel);
+      }
+
+      // rightmargin (IE-attribute)
+      mPart->GetHTMLAttribute(nsHTMLAtoms::rightmargin, value);
+      if (eHTMLUnit_Pixel == value.GetUnit()) {
+        bodyRightMargin = value.GetPixelValue();
+        if (bodyRightMargin < 0) bodyRightMargin = 0;
+        nsCSSRect& margin = aData->mMarginData->mMargin;
+        if (margin.mRight.GetUnit() == eCSSUnit_Null)
+          margin.mRight.SetFloatValue((float)bodyRightMargin, eCSSUnit_Pixel);
       }
     }
 
@@ -471,7 +493,9 @@ nsHTMLBodyElement::StringToAttribute(nsIAtom* aAttribute,
   else if ((aAttribute == nsHTMLAtoms::marginwidth) ||
            (aAttribute == nsHTMLAtoms::marginheight) ||
            (aAttribute == nsHTMLAtoms::topmargin) ||
-           (aAttribute == nsHTMLAtoms::leftmargin)) {
+           (aAttribute == nsHTMLAtoms::bottommargin) ||
+           (aAttribute == nsHTMLAtoms::leftmargin) ||
+           (aAttribute == nsHTMLAtoms::rightmargin)) {
     if (aResult.ParseIntWithBounds(aValue, eHTMLUnit_Pixel, 0)) {
       return NS_CONTENT_ATTR_HAS_VALUE;
     }
